# interactive-radio

./: .env.example  .gitignore
.cursor/plan/: iterative-stargazing-barto.md
backend/: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/agent/: PROMPTS.md  collector.py  prompts.py
backend/agent/browsers/: x_browser.py
backend/agent/fetchers/: reddit_fetcher.py  rss_fetcher.py
backend/db/: redis_client.py
backend/models/: feed_item.py
backend/routers/: collect.py  health.py
backend/utils/: topic_matcher.py
docs/: index.html
mobile/: SETUP.md  app-store-description.txt  app.json  eas.json  metro.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx  topics.tsx
mobile/components/: AudioVisualizer.tsx  CollectingStatus.tsx  NowPlaying.tsx  RadioPlayer.tsx  ScreenHeader.tsx  SpeechAnimation.tsx  TopicTimeline.tsx  VoiceIndicator.tsx  useColorScheme.ts
mobile/constants/: Colors.ts
mobile/contexts/: RadioContext.tsx
mobile/hooks/: useNewsCollection.ts  useRadioAgent.ts
mobile/lib/: api.ts
mobile/types/: radio.ts
