[project]
name = "interactive-radio-backend"
version = "0.1.0"
description = "News collection backend for Interactive Radio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "feedparser>=6.0.0",
    "asyncpraw>=7.8.0",
    "redis[hiredis]>=5.2.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "db*", "models*", "routers*", "utils*"]
